Enhance SEO with title and meta tags in index.html
Updated the title and added meta tags for SEO and structured data.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,32 @@
 	</script> -->
 
     
-    <title>Smash Karts</title>
+    <title>Smash Karts | Play Online For Free</title>
+
+	<meta name="description" content="Play Smash Karts online for free. Fast-paced multiplayer kart battles with weapons. No download, play instantly in your browser.">
+
+<link rel="canonical" href="https://smash-kart.github.io/">
+
+	<meta name="robots" content="index, follow">
+
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Smash Karts",
+  "url": "https://smash-kart.github.io/",
+  "genre": "Action",
+  "operatingSystem": "Browser",
+  "applicationCategory": "Game",
+  "description": "Play Smash Karts online for free. Multiplayer kart racing with weapons.",
+  "author": {
+    "@type": "Organization",
+    "name": "Smash Kart"
+  }
+}
+</script>
+
+
     <link rel="stylesheet" href="css/main.css" />
     
 </head>
@@ -213,6 +238,8 @@
             aiptag.subid = val;
         }
     </script>
+
+	
 </body>
 
 </html>
